@@ -10,10 +10,7 @@
 #include "level2.h"
 #include "level3.h"
 #include "level4.h"
-//#include "drawer.h"
 #include "board.h"
-
-#include <iostream>
 
 Board::Board(int seed, std::string scriptfile, int startLevel):
     level{startLevel},
@@ -24,11 +21,11 @@ Board::Board(int seed, std::string scriptfile, int startLevel):
         else if (level == 2) currLevel = std::make_unique<Level2>(seed, file);
         else if (level == 3) currLevel = std::make_unique<Level3>(seed, file);
         else if (level == 4) currLevel = std::make_unique<Level4>(seed, file);
-        nextBlock = std::move(currLevel->spawnBlock());
+        nextBlock = std::move(currLevel->spawnBlock()); //loading first block to be played
     } 
 
-
-std::vector<std::pair<int,int>> Board::getBoardPixels(int offBack){ //gets a vector of all the pixels on the board except for the last one
+//gets a vector of all the pixels on the board except for (offBack) many off the back, most of the time it will be 0 or 1
+std::vector<std::pair<int,int>> Board::getBoardPixels(int offBack){ 
     std::vector<std::pair<int,int>> boardPixels;
     for (auto b = blocks.begin(); b != blocks.end() - offBack; ++b){
         std::vector<std::pair<int,int>> bp = (*b)->getPixels();
@@ -39,61 +36,66 @@ std::vector<std::pair<int,int>> Board::getBoardPixels(int offBack){ //gets a vec
     return boardPixels;
 }
 
+//checks if a set of pexels is in a valid place
 bool Board::validMove(std::vector<std::pair<int,int>> pixels){
-    //gets a vector of all the pixels on the board except for the last one
-    std::vector<std::pair<int,int>> boardPixels = getBoardPixels(1);
+    std::vector<std::pair<int,int>> boardPixels = getBoardPixels(1); // rest of blocks
     for (auto p : pixels){
         if((p.first < 0) || (p.first >= 18) || (p.second < 0) || (p.second >= 11)) return false; //tests if  pixel out of range
         for (auto bp : boardPixels){  
             if((bp.first == p.first) && (bp.second == p.second))  return false; // tests if current pixel on another pixel
         }
     }
-    return true;
+    return true; //no collison with other pixels
 }
 
+//removes all the rows with full rows 
 void Board::removeRow(){
     int rowsCleared = 0;
-    for(int row = 17; row > 3; --row){
-        std::vector<std::pair<int,int>> boardPixels = getBoardPixels(0);
-        int counter = 0;
+
+    for(int row = 17; row >= 4; --row){ //starting at row 17 to 4 
+        std::vector<std::pair<int,int>> boardPixels = getBoardPixels(0); // check all pixels
+        int counter = 0; // counter for pixels in the current row
         for (auto bp : boardPixels) if (bp.first == row) ++counter;
-        if(counter == 0) break;             //if row is empty
-        if (counter == 11){                 //if row is full
+        if(counter == 0) break;             //if row is empty (0) this means that there are not pixels above and we are done
+        if (counter == 11){                 //if row is full (11) this means this row needs to be removed and all blocks above must drop
             auto b = blocks.begin();
-            while (b != blocks.end()){
+            while (b != blocks.end()){ //go through all blocks
                 std::vector<std::pair<int,int>> newPixels;
-                for (auto p : (*b)->getPixels()){
-                    if (p.first < row) newPixels.emplace_back(std::pair<int,int>{p.first + 1, p.second}); //if above row
-                    else if (p.first > row) newPixels.emplace_back(p);                                    //if below row
+                for (auto p : (*b)->getPixels()){ // this loop is excluding the pixels in the row
+                    if (p.first < row) newPixels.emplace_back(std::pair<int,int>{p.first + 1, p.second}); //if above row drop
+                    else if (p.first > row) newPixels.emplace_back(p);                                    //if below row do nothing
                 }
                 if (newPixels.size() == 0){     //if block empty, remove it
-                    score += ((*b)->getLevelSpawned() + 1) * ((*b)->getLevelSpawned() + 1);
+                    score += ((*b)->getLevelSpawned() + 1) * ((*b)->getLevelSpawned() + 1); // calculates the score
                     b = blocks.erase(b);
                 }
-                else{
+                else{       //if block isnt empty
                     (*b)->setPixels(newPixels);
                     ++b;
                 }
             }
-            ++row;
-            ++rowsCleared;
+            ++row; //reindexing the outter for loop
+            ++rowsCleared; //for scoring
         }
     }
-    if (rowsCleared > 0) score += (rowsCleared + level) * (rowsCleared + level);
+    if (rowsCleared > 0) score += (rowsCleared + level) * (rowsCleared + level); // calcs score
 }
 
+//spanws the block currently in nextBlock onto the board
 void Board::spawnBlock(){
-    blocks.emplace_back(std::move(nextBlock));
-    nextBlock = currLevel->spawnBlock();
-    checkGameOver(blocks.back()->getPixels());
+    blocks.emplace_back(std::move(nextBlock)); //places nextBlok on to the board
+    nextBlock = currLevel->spawnBlock();       // makes a new nextBlock
+    checkGameOver(blocks.back()->getPixels()); //checks if the game will end if the block is spawned where it is
 }
 
+//swaps the current block with another one of type
 void Board::swapBlock(std::string type){
     blocks.pop_back();
     blocks.emplace_back(currLevel->spawnBlock(type));
     checkGameOver(blocks.back()->getPixels());
 }
 
+//level up by times
 void Board::levelUp(int times){
     level += times; 
     if (level > 4) level = 4;
@@ -105,6 +107,7 @@ void Board::levelUp(int times){
     nextBlock = std::move(currLevel->spawnBlock());
 }
 
+//level down by times
 void Board::levelDown(int times){
     level -= times; 
     if (level < 0) level = 0;
@@ -116,7 +119,7 @@ void Board::levelDown(int times){
     nextBlock = std::move(currLevel->spawnBlock());
 }
 
-
+//move right times times
 void Board::moveRight(int times){
     std::vector<std::pair<int,int>> pixels = blocks.back()->getPixels();
     for (int i = 0; i < times; ++i){
@@ -125,10 +128,11 @@ void Board::moveRight(int times){
         if (!validMove(testPixels)) break;          //checks if it is a valid move
         for (auto &p : pixels) ++p.second;          //actually moves pixles 1 to the right
     }
-    blocks.back()->setPixels(pixels);
-    moveDown(blocks.back()->getWeight());
+    blocks.back()->setPixels(pixels);       //actually sets the pixels for the block
+    moveDown(blocks.back()->getWeight());   //block moves down by heavy amount (weight)
 }
 
+//moves left times times
 void Board::moveLeft(int times){
     std::vector<std::pair<int,int>> pixels = blocks.back()->getPixels();
     for (int i = 0; i < times; ++i){
@@ -141,6 +145,7 @@ void Board::moveLeft(int times){
     moveDown(blocks.back()->getWeight());
 }
 
+//moves down times times
 void Board::moveDown(int times){
     std::vector<std::pair<int,int>> pixels = blocks.back()->getPixels();
     for (int i = 0; i < times; ++i){
@@ -152,7 +157,7 @@ void Board::moveDown(int times){
     blocks.back()->setPixels(pixels);
 }
 
-
+//rotates clockwise times times
 void Board::rotateCW(int times){
     std::vector<std::pair<int,int>> pixels = blocks.back()->getPixels();
     for (int i = 0; i < times % 4; ++i){
@@ -167,7 +172,7 @@ void Board::rotateCW(int times){
             if (p.second < colMin) colMin = p.second;
             if (p.second < colMin) colMin = p.second;
         }
-        int height = ((rowMax - rowMin) > (colMax - colMin)) ? (rowMax - rowMin) :  (colMax - colMin);  //finds the "height" block
+        int height = ((rowMax - rowMin) > (colMax - colMin)) ? (rowMax - rowMin) :  (colMax - colMin);  //finds the "height" of the block
         int xoffset = rowMax - height;
         int yoffset = colMin;
 
@@ -178,14 +183,14 @@ void Board::rotateCW(int times){
             int x = tp.first;
             int y = tp.second;
             tp.first = y - yoffset + xoffset;
-            tp.second = height - x + xoffset + yoffset;         //rotates block cw 90degrees
+            tp.second = height - x + xoffset + yoffset;         //rotates testblock cw 90degrees
             if (tp.first > newRowMax) newRowMax = tp.first;
         }
         for (auto &tp : testPixels){
             tp.first += (rowMax - newRowMax);       //fixes spacing
         }
         if (!validMove(testPixels)) break;          //checks if it is a valid move
-        for (auto &p : pixels){
+        for (auto &p : pixels){                     //actually rotates testblock
             int x = p.first;
             int y = p.second;
             p.first = y - yoffset + xoffset + (rowMax - newRowMax);
@@ -196,12 +201,12 @@ void Board::rotateCW(int times){
     moveDown(blocks.back()->getWeight());
 }
 
-
+//rotates counterclockwise times times
 void Board::rotateCCW(int times){
     rotateCW((times % 4)* 3);       //works <3
-    moveDown(blocks.back()->getWeight() - 1); //because
 }
 
+//moves the block down as far as it go and then removes the rows that can be removed
 void Board::drop(){
     moveDown(18); 
     removeRow();
@@ -215,6 +220,7 @@ std::vector<std::unique_ptr<Block>> &Board::getBlocks(){ return blocks; }
 
 std::unique_ptr<Block> &Board::getNextBlock(){ return nextBlock; }
 
+//checks if the game is over, if it should end, it turns on the gameOverSwitch
 void Board::checkGameOver(std::vector<std::pair<int,int>> pixels){
     std::vector<std::pair<int,int>> boardPixels = getBoardPixels(1);
     for (auto p : pixels){
